tests/tests_p1/fail/prof/12nouni.min
program
	string s := "hello\n"
start
	-s!
end
